docs/4.20/rest_api/config_apis/config-apis-index.md
# APIServer \[config.openshift.io/v1\]

Description
APIServer holds configuration (like serving certificates, client CA and CORS domains) shared by all API servers in the system, among them especially kube-apiserver and openshift-apiserver. The canonical name of an instance is 'cluster'.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Authentication \[config.openshift.io/v1\]

Description
Authentication specifies cluster-wide settings for authentication (like OAuth and webhook token authenticators). The canonical name of an instance is `cluster`.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Build \[config.openshift.io/v1\]

Description
Build configures the behavior of OpenShift builds for the entire cluster. This includes default settings that can be overridden in BuildConfig objects, and overrides which are applied to all builds.

The canonical name is "cluster"

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ClusterImagePolicy \[config.openshift.io/v1\]

Description
ClusterImagePolicy holds cluster-wide configuration for image signature verification

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ClusterOperator \[config.openshift.io/v1\]

Description
ClusterOperator is the Custom Resource object which holds the current state of an operator. This object is used by operators to convey their state to the rest of the cluster.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ClusterVersion \[config.openshift.io/v1\]

Description
ClusterVersion is the configuration for the ClusterVersionOperator. This is where parameters related to automatic updates can be set.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Console \[config.openshift.io/v1\]

Description
Console holds cluster-wide configuration for the web console, including the logout URL, and reports the public URL of the console. The canonical name is `cluster`.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# DNS \[config.openshift.io/v1\]

Description
DNS holds cluster-wide information about DNS. The canonical name is `cluster`

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# FeatureGate \[config.openshift.io/v1\]

Description
Feature holds cluster-wide information about feature gates. The canonical name is `cluster`

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# HelmChartRepository \[helm.openshift.io/v1beta1\]

Description
HelmChartRepository holds cluster-wide configuration for proxied Helm chart repository

Compatibility level 2: Stable within a major release for a minimum of 9 months or 3 minor releases (whichever is longer).

Type
`object`

# Image \[config.openshift.io/v1\]

Description
Image governs policies related to imagestream imports and runtime configuration for external registries. It allows cluster admins to configure which registries OpenShift is allowed to import images from, extra CA trust bundles for external registries, and policies to block or allow registry hostnames. When exposing OpenShift’s image registry to the public, this also lets cluster admins specify the external hostname.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ImageDigestMirrorSet \[config.openshift.io/v1\]

Description
ImageDigestMirrorSet holds cluster-wide information about how to handle registry mirror rules on using digest pull specification. When multiple policies are defined, the outcome of the behavior is defined on each field.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ImageContentPolicy \[config.openshift.io/v1\]

Description
ImageContentPolicy holds cluster-wide information about how to handle registry mirror rules. When multiple policies are defined, the outcome of the behavior is defined on each field.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ImagePolicy \[config.openshift.io/v1\]

Description
ImagePolicy holds namespace-wide configuration for image signature verification

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ImageTagMirrorSet \[config.openshift.io/v1\]

Description
ImageTagMirrorSet holds cluster-wide information about how to handle registry mirror rules on using tag pull specification. When multiple policies are defined, the outcome of the behavior is defined on each field.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Infrastructure \[config.openshift.io/v1\]

Description
Infrastructure holds cluster-wide information about Infrastructure. The canonical name is `cluster`

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Ingress \[config.openshift.io/v1\]

Description
Ingress holds cluster-wide information about ingress, including the default ingress domain used for routes. The canonical name is `cluster`.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Network \[config.openshift.io/v1\]

Description
Network holds cluster-wide information about Network. The canonical name is `cluster`. It is used to configure the desired network configuration, such as: IP address pools for services/pod IPs, network plugin, etc. Please view network.spec for an explanation on what applies when configuring this resource.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Node \[config.openshift.io/v1\]

Description
Node holds cluster-wide information about node specific features.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# OAuth \[config.openshift.io/v1\]

Description
OAuth holds cluster-wide information about OAuth. The canonical name is `cluster`. It is used to configure the integrated OAuth server. This configuration is only honored when the top level Authentication config has type set to IntegratedOAuth.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# OperatorHub \[config.openshift.io/v1\]

Description
OperatorHub is the Schema for the operatorhubs API. It can be used to change the state of the default hub sources for OperatorHub on the cluster from enabled to disabled and vice versa.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Project \[config.openshift.io/v1\]

Description
Project holds cluster-wide information about Project. The canonical name is `cluster`

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# ProjectHelmChartRepository \[helm.openshift.io/v1beta1\]

Description
ProjectHelmChartRepository holds namespace-wide configuration for proxied Helm chart repository

Compatibility level 2: Stable within a major release for a minimum of 9 months or 3 minor releases (whichever is longer).

Type
`object`

# Proxy \[config.openshift.io/v1\]

Description
Proxy holds cluster-wide information on how to configure default proxies for the cluster. The canonical name is `cluster`

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

# Scheduler \[config.openshift.io/v1\]

Description
Scheduler holds cluster-wide config information to run the Kubernetes Scheduler and influence its placement decisions. The canonical name for this config is `cluster`.

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`
